# trip-me-up

./: .gitattributes  .gitignore  README.md  pyproject.toml
scratch_space/hasher_/: sample.ipynb
scratch_space/maps_api/: batch_download.ipynb  places.ipynb
src/trip_me_up/: utils.py
src/trip_me_up/config/: .gitignore  constants.py
src/trip_me_up/llm/: hasher.py  vector_db.py
src/trip_me_up/maps/: place_api.py
src/trip_me_up/reqs/: cached.py  utils.py
tests/config/: test_constants.py
tests/llm/: test_hasher.py
