[tool.poetry]
name = "trip-me-up"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "trip_me_up", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3
